--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "typo3-cms-extension",
     "require": {
         "php": "^7.4 || ^8.0",
+        "ext-json": "*",
         "typo3/cms-core": "^10.4 || ^11.5",
         "typo3/cms-fluid": "^10.4 || ^11.5",
         "typo3/cms-frontend": "^10.4 || ^11.5",
