--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-release/1.0": "1.0.x-dev"
+            "dev-master": "1.0.x-dev"
         },
         "typo3/cms":{
             "extension-key": "jwt_sso"
